non_executable_reasons_record_from_random_10k/3687.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
Print'Hello, world'
------------------

[0;36m  File [0;32m"<ipython-input-1-961a6ada4e31>"[0;36m, line [0;32m3[0m
[0;31m    Print'Hello, world'[0m
[0m                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-961a6ada4e31>, line 3)

Executability                            : False
